# pyproject-dependencies

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/pyproject_dependencies/: __main__.py  compat.py
tests/: test_pyproject_dependencies.py  test_utils.py
