[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyproject-dependencies"
dependencies = ["build", "packaging"]
requires-python = ">=3.7"
readme = "README.md"
authors = [
  {name = "Stéphane Bidoul", email = "stephane.bidoul@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/sbidoul/pyproject-dependencies"

[tool.hatch.version]
source = "vcs"
